tests/paczka1/fuzzy1/20662997.err
Error in line 3: S570 S570 82,5
Error in line 24: LjaL A59 93,4
Error in line 25: LjaL A648 59,5
Error in line 29: K9T A59 98,2
Error in line 28: LjaL S570 80,4
